Update web page

--- a/learning/index.html
+++ b/learning/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Animal Kingdom</title>
+    <title>Animal kingdom</title>
 </head>
 <body>
     <h1>Welcome to the Animal Kingdom</h1>
@@ -17,7 +17,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4d/Cat_November_2010-1a.jpg/800px-Cat_November_2010-1a.jpg" alt="Domestic Cat" class="left-image">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Lion_waiting_in_Namibia.jpg/800px-Lion_waiting_in_Namibia.jpg" alt="African Lion" class="right-image">
     </div>
-    
+
     <div class="links">
         <a href="https://en.wikipedia.org/wiki/Cat" target="_blank">Learn about Cats</a>
         <a href="https://en.wikipedia.org/wiki/Lion" target="_blank">Learn about Lions</a>
